data/logs/logs4-30---URBCxg.txt
base.py:30,16:34:24:__connect:653:URBCxg -- Created new connection <sqlite3.Connection object at 0x7f02056a24e0>
base.py:30,16:34:24:_cursor_execute:1311:URBCxg -- SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1
base.py:30,16:34:24:_cursor_execute:1312:URBCxg -- ()
base.py:30,16:34:24:_cursor_execute:1311:URBCxg -- SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1
base.py:30,16:34:24:_cursor_execute:1312:URBCxg -- ()
base.py:30,16:34:24:checkout:507:URBCxg -- Connection <sqlite3.Connection object at 0x7f02056a24e0> checked out from pool
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("files")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'fileId', 'VARCHAR(300)', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (2, 'lastModDate', 'DATETIME', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (3, 'parent_id', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (4, 'isFile', 'BOOLEAN', 0, None, 0)
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("owner")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'name', 'VARCHAR(50)', 0, None, 0)
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("dates")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (2, 'date', 'FLOAT', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (3, 'adds', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (4, 'deletes', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (5, 'bin_width', 'FLOAT', 0, None, 0)
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("closure")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'parent', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (2, 'child', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (4, 'depth', 'INTEGER', 0, None, 0)
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("filename")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'fileId', 'INTEGER', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (2, 'fileName', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (3, 'owner_id', 'INTEGER', 0, None, 0)
base.py:30,16:34:24:_execute_context:1205:URBCxg -- PRAGMA main.table_info("tasks")
base.py:30,16:34:24:_execute_context:1207:URBCxg -- ()
result.p:30,16:34:24:_init_metadata:809:URBCxg -- Col ('cid', 'name', 'type', 'notnull', 'dflt_value', 'pk')
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (0, 'id', 'INTEGER', 1, None, 1)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (1, 'path', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (2, 'creds', 'BLOB', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (3, 'fileid', 'VARCHAR(600)', 0, None, 0)
result.p:30,16:34:24:process_rows:1249:URBCxg -- Row (4, 'userid', 'VARCHAR(600)', 0, None, 0)
base.py:30,16:34:24:_finalize_fairy:684:URBCxg -- Connection <sqlite3.Connection object at 0x7f02056a24e0> being returned to pool
base.py:30,16:34:24:_reset:872:URBCxg -- Connection <sqlite3.Connection object at 0x7f02056a24e0> rollback-on-return
base.py:30,16:34:24:_close_connection:267:URBCxg -- Closing connection <sqlite3.Connection object at 0x7f02056a24e0>
base.py:30,16:34:24:__connect:653:URBCxg -- Created new connection <sqlite3.Connection object at 0x7f02056a24e0>
base.py:30,16:34:24:checkout:507:URBCxg -- Connection <sqlite3.Connection object at 0x7f02056a24e0> checked out from pool
callback:30,16:34:24:<module>:27:URBCxg -- DASH CALLBACKS IMPORTED
configlo:30,16:34:24:handle_exception:84:URBCxg -- Custom Uncaught exception
Traceback (most recent call last):
  File "run.py", line 28, in <module>
    app = create_flask_serv()
  File "/home/henry/pydocs/flaskr/__init__.py", line 16, in create_flask_serv
    register_dashapp(flask_serv)
  File "/home/henry/pydocs/flaskr/dashapp/__init__.py", line 12, in register_dashapp
    from flaskr.dashapp.layout import layout
  File "/home/henry/pydocs/flaskr/dashapp/layout.py", line 62
    figure = gen_week_line(), test["userid"]
                              ^
SyntaxError: positional argument follows keyword argument
configlo:30,16:34:24:mp_sendmail:121:URBCxg -- sending mail
configlo:30,16:34:25:handle_exception:87:URBCxg -- exiting! from sshook
